--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
-<div class="min-h-screen bg-gray-50">
+<div class="min-h-screen bg-gray-50 flex flex-col">
   <app-navigation></app-navigation>
-  <main>
+  <main class="flex-1">
     <router-outlet></router-outlet>
   </main>
+  <app-footer></app-footer>
+  
 </div>
